--- a/misc/ToDo
+++ b/misc/ToDo
@@ -4,7 +4,7 @@ To Do:
 Convert state parser from load "levels" to load "scenes"
 
 State parser needs to be able to load "First scene", then able to load next scene
-
+(Can switch levels in Play State)
 
 Object layer needs to load tilesets for objects and reference them
 
